# infra-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: __init__.py  config.py  main.py
app/_internal/: __init__.py  logging.py
app/bot/: __init__.py  core.py  decorators.py  formatters.py
app/mfa/: __init__.py  database.py  decorators.py  encryption.py  handlers.py  qr.py  session.py  totp.py
app/mikrotik/: README.md  __init__.py  client.py  command_registry.py  formatters.py  handlers.py
app/mikrotik/_internal/: __init__.py  command_base.py  commands.py  keyboards.py  middleware.py  registration.py
deploy/: README.md
k8s/: README.md  deploy.sh  deployment.yaml  kustomization.yaml  namespace.yaml  pv.yaml  pvc.yaml  secret.example.yaml  sync-configs.sh
scripts/: manage_mfa.py
tests/: __init__.py  conftest.py  test_config.py
tests/bot/: test_decorators.py  test_formatters.py
tests/mikrotik/: __init__.py  test_callbacks.py  test_client.py  test_commands.py  test_formatters.py  test_handlers.py  test_keyboards.py  test_operations.py  test_registration.py
