[project]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Cestari",email = "brunobcestari@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-telegram-bot[job-queue] (>=22.5,<23.0)",
    "routeros-api (>=0.21.0,<0.22.0)",
    # MFA dependencies
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"

]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0)",
    "pytest-asyncio (>=0.24.0)",
    "pytest-cov (>=6.0.0)",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
